crates/solidity/testing/snapshots/bindings_output/yul/labels/generated/v2/0.6.2-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or OpenBrace or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or YulBreakKeyword or YulContinueKeyword or YulDecimalLiteral or YulFalseKeyword or YulForKeyword or YulFunctionKeyword or YulHexLiteral or YulIdentifier or YulIfKeyword or YulLeaveKeyword or YulLetKeyword or YulSwitchKeyword or YulTrueKeyword.
    ╭─[input.sol:7:13]
    │
  7 │ ╭─▶         loop:
    ┆ ┆   
 14 │ ├─▶         }
    │ │               
    │ ╰─────────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (5):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:2:14] (function, type: function () returns void)
- Def: #3 ["n" @ input.sol:4:17] (yul variable)
- Def: #4 ["a" @ input.sol:5:17] (yul variable)
- Def: #5 ["b" @ input.sol:6:17] (yul variable)

------------------------------------------------------------------------

References (3):
- Ref: ["calldataload" @ input.sol:4:22] -> built-in
- Ref: ["a" @ input.sol:6:22] -> #4
- Ref: ["loop" @ input.sol:7:9] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 4 │             let n := calldataload(4)
   │                 ┬    ──────┬─────  
   │                 ╰────────────────── name: 3
   │                            │       
   │                            ╰─────── built-in
 5 │             let a := 1
   │                 ┬  
   │                 ╰── name: 4
 6 │             let b := a
   │                 ┬    ┬  
   │                 ╰─────── name: 5
   │                      │  
   │                      ╰── ref: 4
 7 │         loop:
   │         ──┬─  
   │           ╰─── unresolved
───╯
